= 更新记录

== 1.2.0 （DEV）

* Dependency 兼容性升级

** Spring Boot （3.2 -> 3.3）小版本升级，部分依赖稳定性小版本升级
*** jna: 5.17.0、hutool 5.8.39、guava:33.4.8-jre、bcprov:1.81、caffeine:3.1.8、tika:2.9.4、opencsv:5.9、lombok:1.18.38、druid:1.2.23、redisson:3.45.1

* Core

** 功能: 支持异步线程若缺少 traceId 将自动设置，并新增 relatedTraceId，允许关联异步任务trace、触发trace
** 优化: PeriodicTask 支持使用异步线程池
** 优化: Threads execute、delay、schedule、executeAndWait 方法支持指定线程池运行
** 优化: 支持配置缓存key 分隔符（`shoulder.application.cacheKeySplit`）
** 优化: EmbeddedRedis 支持配置启动，默认不启动

* Cluster

** 功能: 升级 RedisInstanceIdProvider 提供企业级 instantId 分配策略（支持 redis 集群、增加权限、更精准的报错提示和排查指南等）。

* 其他
** 优化: 部分配置项添加提示：
*** `shoulder.redis.key-prefix` 默认以 `appId:` 开头，
*** `shoulder.db.sequence.table-name` 配置添加开关，默认 `tb_sequence`

== 1.1.1 （2025-05-30）

* Batch

** 优化: batch-activity 示例页面不再需手动调整Enum名称
** 优化: batch-activity.queryProgress 处理进度检查逻辑，仅检查第一个节点是否存在
** 优化: batch 导入导出字符集未配置时使用全局默认编码
** 优化: 为 en_US 设置默认 UTF-8
** 功能: batch 支持查询单个处理详情

* Core

** 修复: 非默认时区下， LocalDateTime 转 Instant 的时区转化错误
** 修复: WithPrefixKeyStringRedisSerializer 获取key时少了第一位字符问题
** 功能: 支持替换默认的 WithPrefixKeyStringRedisSerializer
** 优化: 优化编译警告，JDK 17 可编译与运行

* Operation-Log

** 优化: 支持通过注入 Bean 替换默认的 DefaultOperationLogParamValueConverter

== 1.1 （2025-05-09）

* Core

** Threads 工具类增加线程名，启动、完成/异常日志、摘要日志打印
** Threads 添加回调功能，除了支持统计数据外，还允许回调时 cancel / interrupt 提交的任务
** 鲁棒性优化：【兼容性】字典 getEnumItemIdClass 改名 resolveEnumClass，避免序列化问题

* Operation-log
** 功能增强【兼容性】OperationLoggerInterceptor 支持返回 false 不记录日志
** 优化 isEnableAutoLog disableAutoLog 执行时间，不再强制检查上下文
** 优化，去除 OperationLogDTO 的默认值，改为手动设置
** 添加默认日志查询界面
** OperationResult 操作结果类型新增 `UNKNOWN`

* Web
** 修复 RestController 返回包含 json 转义字符的 str 时，部分场景返回格式不符合预期
** 扩展功能调整
*** 校验规则默认api路径 `/api/v1/validate` 更换为 `/api/v1/validation`
*** 字典默认api路径 `/api/v1/dictionary` 更换为 `/api/v1/dictionaries`、`/api/v1/dictionary/type` 更换为 `/api/v1/dictionaries/types`、`/api/v1/dictionary/type/all` 更换为 `/api/v1/dictionaries/types/listAll`、`/ui/dictionary` 更换为 `/ui/dictionaries`